Create modules for each page
Create a separate module for each page of the site: Home, About,
and Menu. On index.js, write the logic to toggle between each page
when the nav buttons are clicked.

--- a/src/template.html
+++ b/src/template.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pizza Palace</title>
 </head>
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <h1>Pizza Palace</h1>
+            <button id="home-button">Home</button>
+            <button id="menu-button">Menu</button>
+            <button id="about-button">About</button>
         </nav>
     </header>
     <div id="content"></div>
