--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,11 @@
     <header>
       <nav>
         <div class="title-div">
-          <img src="/src/pizza-header-icon.png" alt="Pizza icon" class="header-icon"/>
+          <img
+            src="/src/pizza-header-icon.png"
+            alt="Pizza icon"
+            class="header-icon"
+          />
           <h1>Pizza Palace</h1>
         </div>
         <div class="button-div">
@@ -19,16 +23,61 @@
         </div>
       </nav>
     </header>
-    <div id="content">
-    </div>
+    <div id="content"></div>
     <footer>
-      <div class="footer-socials">Let's Stay In Touch!
-        <p>FB</p>
-        <p>IG</p>
-        <p>Phone Number</p>
-        <p>Email</p>
+      <div class="footer-div">
+        <div class="socials-footer">
+          <p>Let's Stay In Touch!</p>
+          <div class="social-icons-div">
+            <img
+              src="./facebook.png"
+              alt="Facebook icon"
+              class="socials-icon"
+            />
+            <img
+              src="./instagram.png"
+              alt="Instagram icon"
+              class="socials-icon"
+            />
+            <img src="./tiktok.png" alt="TikTok icon" class="socials-icon" />
+            <img src="./email.png" alt="E-Mail icon" class="socials-icon" />
+          </div>
+        </div>
+        <table>
+          <tr>
+            <th>Day</th>
+            <th>Hours</th>
+          </tr>
+          <tr>
+            <td>Monday</td>
+            <td>11:00 AM - Midnight</td>
+          </tr>
+          <tr>
+            <td>Tuesday</td>
+            <td>11:00 AM - Midnight</td>
+          </tr>
+          <tr>
+            <td>Wednesday</td>
+            <td>11:00 AM - Midnight</td>
+          </tr>
+          <tr>
+            <td>Thursday</td>
+            <td>11:00 AM - Midnight</td>
+          </tr>
+          <tr>
+            <td>Friday</td>
+            <td>11:00 AM - Midnight</td>
+          </tr>
+          <tr>
+            <td>Saturday</td>
+            <td>11:00 AM - Midnight</td>
+          </tr>
+          <tr>
+            <td>Sunday</td>
+            <td>Noon - 10:00 PM</td>
+          </tr>
+        </table>
       </div>
-      <table>Hours</table>
       <p>Created by Jessi B. for the Odin Project</p>
     </footer>
   </body>
