--- a/src/template.html
+++ b/src/template.html
@@ -26,7 +26,8 @@
     <div id="content"></div>
     <footer>
       <div class="footer-div">
-        <div class="socials-footer">
+        <div class="footer-left-column">
+          <button id="footer-order-button">Order Now</button>
           <p>Let's Stay In Touch!</p>
           <div class="social-icons-div">
             <img
@@ -43,40 +44,42 @@
             <img src="./email.png" alt="E-Mail icon" class="socials-icon" />
           </div>
         </div>
-        <table>
-          <tr>
-            <th>Day</th>
-            <th>Hours</th>
-          </tr>
-          <tr>
-            <td>Monday</td>
-            <td>11:00 AM - Midnight</td>
-          </tr>
-          <tr>
-            <td>Tuesday</td>
-            <td>11:00 AM - Midnight</td>
-          </tr>
-          <tr>
-            <td>Wednesday</td>
-            <td>11:00 AM - Midnight</td>
-          </tr>
-          <tr>
-            <td>Thursday</td>
-            <td>11:00 AM - Midnight</td>
-          </tr>
-          <tr>
-            <td>Friday</td>
-            <td>11:00 AM - Midnight</td>
-          </tr>
-          <tr>
-            <td>Saturday</td>
-            <td>11:00 AM - Midnight</td>
-          </tr>
-          <tr>
-            <td>Sunday</td>
-            <td>Noon - 10:00 PM</td>
-          </tr>
-        </table>
+        <div class="footer-right-column">
+          <table>
+            <tr>
+              <th>Day</th>
+              <th>Hours</th>
+            </tr>
+            <tr>
+              <td>Monday</td>
+              <td>11:00 AM - Midnight</td>
+            </tr>
+            <tr>
+              <td>Tuesday</td>
+              <td>11:00 AM - Midnight</td>
+            </tr>
+            <tr>
+              <td>Wednesday</td>
+              <td>11:00 AM - Midnight</td>
+            </tr>
+            <tr>
+              <td>Thursday</td>
+              <td>11:00 AM - Midnight</td>
+            </tr>
+            <tr>
+              <td>Friday</td>
+              <td>11:00 AM - Midnight</td>
+            </tr>
+            <tr>
+              <td>Saturday</td>
+              <td>11:00 AM - Midnight</td>
+            </tr>
+            <tr>
+              <td>Sunday</td>
+              <td>Noon - 10:00 PM</td>
+            </tr>
+          </table>
+        </div>
       </div>
       <p>Created by Jessi B. for the Odin Project</p>
     </footer>
