--- a/src/template.html
+++ b/src/template.html
@@ -27,7 +27,6 @@
     <footer>
       <div class="footer-div">
         <div class="footer-left-column">
-          <button id="footer-order-button">Order Now</button>
           <p>Let's Stay In Touch!</p>
           <div class="social-icons-div">
             <img
@@ -42,36 +41,19 @@
             />
             <img src="./tiktok.png" alt="TikTok icon" class="socials-icon" />
             <img src="./email.png" alt="E-Mail icon" class="socials-icon" />
+            <div>pizzapalaceonline@fake.com</div>
+            <div>(555)123-4567</div>
           </div>
         </div>
         <div class="footer-right-column">
-          <table>
+          <p>Come Visit!</p>
+          <table class="footer-hours">
             <tr>
               <th>Day</th>
               <th>Hours</th>
             </tr>
             <tr>
-              <td>Monday</td>
-              <td>11:00 AM - Midnight</td>
-            </tr>
-            <tr>
-              <td>Tuesday</td>
-              <td>11:00 AM - Midnight</td>
-            </tr>
-            <tr>
-              <td>Wednesday</td>
-              <td>11:00 AM - Midnight</td>
-            </tr>
-            <tr>
-              <td>Thursday</td>
-              <td>11:00 AM - Midnight</td>
-            </tr>
-            <tr>
-              <td>Friday</td>
-              <td>11:00 AM - Midnight</td>
-            </tr>
-            <tr>
-              <td>Saturday</td>
+              <td>Monday - Saturday</td>
               <td>11:00 AM - Midnight</td>
             </tr>
             <tr>
@@ -81,7 +63,7 @@
           </table>
         </div>
       </div>
-      <p>Created by Jessi B. for the Odin Project</p>
+      <p class="odin-blurb">Created by Jessi B. for the Odin Project</p>
     </footer>
   </body>
 </html>
