Move all assets to "assets" folder
Create assets folder. Reorganize files so all images and fonts are
within the folder and properly sourced in all code.

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
       <nav>
         <div class="title-div">
           <img
-            src="/src/pizza-header-icon.png"
+            src="/src/assets/pizza-header-icon.png"
             alt="Pizza icon"
             class="header-icon"
           />
@@ -30,17 +30,17 @@
           <p>Let's Stay In Touch!</p>
           <div class="social-icons-div">
             <img
-              src="./facebook.png"
+              src="./assets/facebook.png"
               alt="Facebook icon"
               class="socials-icon"
             />
             <img
-              src="./instagram.png"
+              src="./assets/instagram.png"
               alt="Instagram icon"
               class="socials-icon"
             />
-            <img src="./tiktok.png" alt="TikTok icon" class="socials-icon" />
-            <img src="./email.png" alt="E-Mail icon" class="socials-icon" />
+            <img src="./assets/tiktok.png" alt="TikTok icon" class="socials-icon" />
+            <img src="./assets/email.png" alt="E-Mail icon" class="socials-icon" />
             <div>pizzapalaceonline@fake.com</div>
             <div>(555)123-4567</div>
           </div>
