--- a/index.html
+++ b/index.html
@@ -1,22 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/src/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizza Palace</title>
-<script defer src="main.js"></script></head>
-<body>
+  <script defer src="main.js"></script></head>
+  <body>
     <header>
-        <nav>
-            <h1>Pizza Palace</h1>
-            <button id="home-button">Home</button>
-            <button id="menu-button">Menu</button>
-            <button id="about-button">About</button>
-        </nav>
+      <nav>
+        <div class="title-div">
+          <img
+            src="0965e5d05c9e5fb97738.png"
+            alt="Pizza icon"
+            class="header-icon"
+          />
+          <h1>Pizza Palace</h1>
+        </div>
+        <div class="button-div">
+          <button id="home-button">Home</button>
+          <button id="menu-button">Menu</button>
+          <button id="about-button">About</button>
+        </div>
+      </nav>
     </header>
-    <div id="content">
-        <img src="/home/murdermart/restaurant-page/src/pizza-bg.jpg">
-    </div>
-</body>
+    <div id="content"></div>
+    <footer>
+      <div class="footer-div">
+        <div class="footer-left-column">
+          <p>Let's Stay In Touch!</p>
+          <div class="social-icons-div">
+            <img
+              src="687aba1e82563cc1ee73.png"
+              alt="Facebook icon"
+              class="socials-icon"
+            />
+            <img
+              src="0d7db166ff6698159b0f.png"
+              alt="Instagram icon"
+              class="socials-icon"
+            />
+            <img src="f2b19d871efab82feb17.png" alt="TikTok icon" class="socials-icon" />
+            <img src="d9dcf5b103c8657e81fc.png" alt="E-Mail icon" class="socials-icon" />
+            <div>pizzapalaceonline@fake.com</div>
+            <div>(555)123-4567</div>
+          </div>
+        </div>
+        <div class="footer-right-column">
+          <p>Come Visit!</p>
+          <table class="footer-hours">
+            <tr>
+              <th>Day</th>
+              <th>Hours</th>
+            </tr>
+            <tr>
+              <td>Monday - Saturday</td>
+              <td>11:00 AM - Midnight</td>
+            </tr>
+            <tr>
+              <td>Sunday</td>
+              <td>Noon - 10:00 PM</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <p class="odin-blurb">Created by Jessi B. for the Odin Project</p>
+    </footer>
+  </body>
 </html>
